--- a/Halloapp/ar.lproj/Localizable.strings
+++ b/Halloapp/ar.lproj/Localizable.strings
@@ -700,6 +700,9 @@
 /* Text to show on profile for users you are not connected with */
 "exchange.phone.numbers.to.connect" = "للتواصل، يجب تبادل أرقام الهاتف";
 
+/* Text on external share preview background, followed by URL */
+"externalshare.download" = "تنزيل هالوآب مجانًا:";
+
 /* Description of an externally shared post containing an audio post */
 "externalShare.og.description.audio" = "منشور صوتي";
 
@@ -711,6 +714,9 @@
 
 /* Title for posts that are externally shared, 'John Smith's HalloApp Post' */
 "externalShare.og.title3" = "منشور %@ على هالوآب";
+
+/* Attached to our logo as an image, 'Posted from HalloApp' */
+"externalshare.postedFrom" = "تمت المشاركة من هالوآب";
 
 /* VoiceOver label for camera button in floating compose post menu in Home view. */
 "fab.accessibility.camera" = "الكاميرا";
@@ -1403,6 +1409,9 @@
 /* Call to action to forward a message which contains more than once media item */
 "message.forward.all" = "إعادة توجيه الكل";
 
+/* label on a chat message to indicate the chat message has been forwarded */
+"message.forwarded" = "تمت إعادة توجيهها";
+
 /* Message action. Verb. */
 "message.reply" = "ردّ";
 
@@ -1412,6 +1421,9 @@
 /* Disclaimer to tell the user that their moments go to all of their contacts on HalloApp. */
 "moment.contacts.disclaimer" = "لا يمكن مشاركة اللحظة الخاصة بك إلا مع جهات اتصالك على هالوآب";
 
+/* The format of a moment's location string. The first argument could be a point of interest or the name of a neighborhood, whereas the second could be a city or state name. E.g., "Brooklyn Bridge, New York". */
+"moment.location.format" = "%1$@، %2$@";
+
 /* Text displayed the first time the user acts to post a second moment in the same day. */
 "moment.replacement.disclaimer" = "ستحل هذه اللحظة الجديدة محل اللحظة السابقة.";
 
@@ -1419,7 +1431,7 @@
 "moment.replacement.title" = "تنبيه";
 
 /* Text on a locked moment that explains the need to post your own in order to view it. */
-"moment.unlock.disclaimer" = "لرؤية هذه اللحظة، يجب مشاركة اللحظة الخاصة بك";
+"moment.unlock.disclaimer" = "لرؤية اللحظات، يجب مشاركة اللحظة الخاصة بك";
 
 /* For indicating that there was an error while uploading the post. */
 "moment.uploading.failure" = "خطأ";
@@ -1508,6 +1520,12 @@
 /* Content for unknown contact notification. */
 "notification.contact.unknown.content" = "إحدى جهات اتصالك على هالوآب الآن";
 
+/* Body of the daily moment notification. */
+"notification.daily.moment.body" = "لديك دقيقتان لمشاركة لحظة";
+
+/* Title of the daily moment notification. */
+"notification.daily.moment.title" = "اللحظة اليومية";
+
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ قبل دعوتك للانضمام إلى هالوآب 🎉";
 
@@ -1568,6 +1586,9 @@
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 فيديو";
 
+/* Push notification for a reaction to post */
+"notification.post.reaction" = "تفاعل بإضافة %@ إلى منشور";
+
 /* New moment unlock notification text to be shown to the user. */
 "notification.unlocked.moment.1" = "شارك %@ لحظة جديدة لمشاهدة اللحظة الخاصة بك";
 
@@ -1615,6 +1636,9 @@
 
 /* Text for new user popup pointing at new post button */
 "nux.new.post.button" = "انقر هنا لمشاركة تحديث مع أصدقائك وعائلتك على هالوآب";
+
+/* Preset text for the composer when the user is creating their first post. */
+"onboarding.post.text" = "مرحبًا! أنا أستخدم هالوآب.";
 
 /* Title of the button that opens the camera. */
 "open.camera" = "فتح الكاميرا";
@@ -1692,7 +1716,7 @@
 "post.privacy.header.groups" = "مشاركة مع مجموعة فقط";
 
 /* Header when selecting destinations to forward a message, this header appears above the recent section */
-"post.privacy.header.recent" = "حديثة";
+"post.privacy.header.recent" = "جهات الاتصال الحديثة";
 
 /* Controller title for changing destination and privacy */
 "post.privacy.title" = "مشاركة مع...";
@@ -1889,6 +1913,42 @@
 /* Confirmation when a user was successfully removed from favorites. */
 "removed.user.from.favorites" = "تمت إزالة %@ من المفضلة";
 
+/* Title of the button that both reports and blocks a user. */
+"report.and.block" = "الإبلاغ والحظر";
+
+/* Title of the button to report a post. */
+"report.post" = "الإبلاغ عن المنشور";
+
+/* Title of the button that both reports a post and removes it. */
+"report.post.and.remove" = "الإبلاغ عن المنشور وإزالته";
+
+/* Message that's displayed when reporting a post failed. */
+"report.post.failure" = "تعذّر الإبلاغ عن المنشور";
+
+/* Message confirming if the user wants to report someone's post. */
+"report.post.message" = "هل تريد فعلاً الإبلاغ عن هذا المنشور لـ %@؟";
+
+/* Message that's displayed after successfully reporting a post. */
+"report.post.success" = "تم الإبلاغ عن المنشور";
+
+/* Title of the report button. */
+"report.title" = "إبلاغ";
+
+/* Title of a button that reports a user. */
+"report.user" = "الإبلاغ عن المستخدم";
+
+/* Message that's displayed when reporting a user failed. */
+"report.user.failure" = "تعذّر الإبلاغ عن %@";
+
+/* Message confirming if the user wants to report someone. */
+"report.user.message" = "هل تريد فعلاً الإبلاغ عن %@؟";
+
+/* Message that's displayed after successfully reporting a user. */
+"report.user.success" = "تم الإبلاغ عن %@؟";
+
+/* Title of the dialog that appears when reporting a user. */
+"report.user.title" = "الإبلاغ عن %@";
+
 /* Instructions for how to use the safety number verification UI */
 "safety.number.instructions" = "للتحقق من أن اتصالك بـ %@ آمن، يجب التأكد من مطابقة الأرقام أعلاه للأرقام المعروضة على جهازه، أو يمكنك مسح رمز الاستجابة السريعة على هاتفه.";
 
@@ -2066,6 +2126,9 @@
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "انضم إلى شبكة العلاقات الفعلية الخاصة بي على هالوآب. قم بتنزيل التطبيق مجانًا من halloapp.com/dl";
 
+/* Title for inline external share prompt */
+"share.carousel.title" = "المشاركة مع المزيد من الأصدقاء:";
+
 /* Show more groups in the share group selection */
 "share.destination.more" = "عرض المزيد...";
 
@@ -2074,6 +2137,21 @@
 
 /* Text placed on the blurred overlay of someone else's moment. */
 "shared.moment" = "لحظة %@";
+
+/* Title for sharing to instagram stories */
+"shareprovider.instagramstories.title" = "قصص إنستجرام";
+
+/* Name of system messages app */
+"shareprovider.messages.title" = "الرسائل";
+
+/* Title for button launching system share dialog */
+"shareprovider.system.title" = "المشاركة عبر...";
+
+/* Name of Twitter app */
+"shareprovider.twitter.title" = "تويتر";
+
+/* Whatsapp messages share destination */
+"shareprovider.whatsapp.title" = "واتساب";
 
 /* Label for call bar (shows at top of screen during active call). Returns user to call screen when tapped. */
 "tap.return.call" = "انقر للعودة إلى المكالمة";
@@ -2221,6 +2299,9 @@
 
 /* Message asking if the user is sure they want to block this user */
 "user.block.message" = "هل تريد فعلاً حظر %@ على هالوآب؟ يمكنك تغيير ذلك لاحقًا.";
+
+/* Label shown in group chat when a user is typing */
+"user.chat.typing" = "%@ يكتب...";
 
 /* Option when user taps more on profile page */
 "user.option.block" = "الحظر على هالوآب";
