--- a/Halloapp/ru.lproj/Localizable.strings
+++ b/Halloapp/ru.lproj/Localizable.strings
@@ -517,6 +517,15 @@
 /* When user replies privately to a post, it sends a quoted message to the author of the post via chat. This label is displyed in the chat bubble to indicate a post reply when the post has expired. */
 "chat.quoted.post.expired.label" = "Сообщение истекло";
 
+/* Section title showing all the users to whom a particular message has been delivered to in a group chat */
+"chat.status.delivered.to" = "Доставлен";
+
+/* Section title showing all the users who have played a particular audio message in group chat */
+"chat.status.played.by" = "Просмотрено";
+
+/* Section title showing all the users who have read a particular message in group chat */
+"chat.status.read.by" = "Прочитано";
+
 /* Label shown when user is typing */
 "chat.typing.capitalized" = "печатает...";
 
@@ -910,6 +919,9 @@
 /* Button under someone's post. Verb. */
 "feedpost.button.comment" = "Комментировать";
 
+/* Button under someone's post. Noun. */
+"feedpost.button.comments" = "Комментарии";
+
 /* Button under someoneelse's post. Verb. */
 "feedpost.button.reply" = "Ответить лично";
 
@@ -927,6 +939,9 @@
 
 /* Title of group background screen */
 "group.bg.title" = "Фон";
+
+/* When a user is no longer a member of a chat group, this message is displyed at the bottom of the chat, preventing them from sending messages. */
+"group.chat.contact.is.not.member" = "Вы не можете отправлять сообщения в эту группу, потому что вы больше не являетесь ее участником.";
 
 /* Label shown above group description input box */
 "group.description.label" = "Описание группы";
@@ -1412,6 +1427,10 @@
 /* label on a chat message to indicate the chat message has been forwarded */
 "message.forwarded" = "Переправлено";
 
+/* Message action which shows receipt info when tapped. Verb.
+   Title of the view that displays receipt info for a message. */
+"message.info" = "Информация";
+
 /* Message action. Verb. */
 "message.reply" = "Ответить";
 
@@ -1520,6 +1539,12 @@
 /* Content for unknown contact notification. */
 "notification.contact.unknown.content" = "Один из Ваших контактов теперь пользуется HalloApp";
 
+/* Body of the daily moment notification. */
+"notification.daily.moment.body" = "У вас есть 2 минуты, чтобы поделиться моментом";
+
+/* Title of the daily moment notification. */
+"notification.daily.moment.title" = "Ежедневный момент";
+
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ только что принял(-а) Ваше приглашение присоединиться к HalloApp 🎉";
 
@@ -1580,6 +1605,9 @@
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 видео";
 
+/* Push notification for a reaction to post */
+"notification.post.reaction" = "Отреагировал %@ на сообщение";
+
 /* New moment unlock notification text to be shown to the user. */
 "notification.unlocked.moment.1" = "%@ поделился новым моментом и разблокировал ваш";
 
@@ -1639,6 +1667,9 @@
 
 /* Menu option to open a location in (Apple) Maps. */
 "openInMapsApp.maps" = "Открыть в Картах";
+
+/* Title that suggests something is optional. */
+"optional.title" = "По желанию";
 
 /* button to launch photo and video library */
 "photo.and.video.library" = "Фото и видеотека";
