--- a/Notification Service Extension/ru.lproj/Localizable.strings
+++ b/Notification Service Extension/ru.lproj/Localizable.strings
@@ -145,6 +145,12 @@
 /* Content for unknown contact notification. */
 "notification.contact.unknown.content" = "Один из ваших контактов сейчас в HalloApp";
 
+/* Body of the daily moment notification. */
+"notification.daily.moment.body" = "У вас есть 2 минуты, чтобы поделиться моментом";
+
+/* Title of the daily moment notification. */
+"notification.daily.moment.title" = "Ежедневный момент";
+
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ только что принял(-а) ваше приглашение присоединиться к HalloApp 🎉";
 
@@ -204,6 +210,9 @@
 
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 видео";
+
+/* Push notification for a reaction to post */
+"notification.post.reaction" = "Отреагировал %@ на сообщение";
 
 /* New moment unlock notification text to be shown to the user. */
 "notification.unlocked.moment.1" = "%@ поделился новым моментом и разблокировал ваш";
