--- a/Halloapp/pt.lproj/InfoPlist.strings
+++ b/Halloapp/pt.lproj/InfoPlist.strings
@@ -5,14 +5,14 @@
 "NSCameraUsageDescription" = "Isso permite fazer chamadas de vídeo e tirar fotos e vídeos no HalloApp";
 
 /* Privacy - Contacts Usage Description */
-"NSContactsUsageDescription" = "Permita que o HalloApp acesse seus contatos para poder compartilhar e ver postagens de seus amigos e familiares.";
+"NSContactsUsageDescription" = "To share and see posts from your friends and family, allow HalloApp upload your contacts to it's servers.";
 
 /* Privacy - Location When In Use Usage Description */
-"NSLocationWhenInUseUsageDescription" = "Isso permite que você navegue e compartilhe locais perto de você.";
+"NSLocationWhenInUseUsageDescription" = "Isso permite que você envie sua localização atual ou lugares próximos em comentários e bate-papos.";
 
 /* Privacy - Microphone Usage Description */
 "NSMicrophoneUsageDescription" = "Isso lhe permite fazer chamadas, enviar postagens e mensagens de áudio e gravar vídeos com som.\n";
 
 /* Privacy - Photo Library Usage Description */
-"NSPhotoLibraryUsageDescription" = "Isso lhe permite compartilhar fotos e vídeos da sua biblioteca e guardar os que capturar.";
+"NSPhotoLibraryUsageDescription" = "Isso permite que você envie fotos e vídeos da sua galeria e salve os que você capturar.";
 
