--- a/Halloapp/pt.lproj/Localizable.strings
+++ b/Halloapp/pt.lproj/Localizable.strings
@@ -284,7 +284,7 @@
 "camera.init.error.title" = "Erro de inicialização";
 
 /* Text shown on the camera screen when composing a new moment. */
-"camera.moment.subtitle" = "Momentos desaparecem após 24 horas e só podem ser vistos uma vez";
+"camera.moment.subtitle" = "Momentos desaparecem após 24 horas";
 
 /* Text shown on the camera screen when composing a new moment to unlock someone else's moment. */
 "camera.moment.unlock.subtitle" = "Para ver o momento de %@, compartilhe o seu próprio";
@@ -333,6 +333,12 @@
 
 /* Message text shown when you join a group via invite link */
 "chat.group.event.join.you" = "Entrou no grupo por meio de um link de convite de grupo";
+
+/* Message text shown when a group member is auto promoted to admin. When the one-and-only admin of a group leaves the group, a random member is promoted to admin */
+"chat.group.event.member.autopromoted" = "%@ foi promovido automaticamente a administrador";
+
+/* Message text shown when you are auto promoted to admin. When the one-and-only admin of a group leaves the group, a random member is promoted to admin */
+"chat.group.event.member.autopromoted.you" = "Você foi promovido automaticamente à administração";
 
 /* Message text shown with the user who left the group */
 "chat.group.event.member.left" = "%@ saiu";
@@ -692,7 +698,7 @@
 "Delete" = "Apagar";
 
 /* Body of the bottom sheet that is presented only once to explain the moments feature. */
-"describing.moments" = "Desbloqueie os momentos de seus amigos compartilhando os seus. Os momentos são casuais, eles desaparecem depois que você os vê uma vez.";
+"describing.moments" = "Veja os momentos de seus amigos compartilhando os seus. Os momentos são casuais, desaparecem após 24 horas.";
 
 /* Send to button and screen title */
 "destination.send.to" = "Enviar para";
@@ -740,7 +746,7 @@
 "fab.accessibility.voice" = "Enviar Audio";
 
 /* Label for floating moment button on home feed. */
-"fab.moment.button" = "Momento";
+"fab.moment.button" = "Novo Momento";
 
 /* Label for floating compose post menu on Group screen. */
 "fab.post.button" = "Publicar";
@@ -939,6 +945,9 @@
 
 /* Title of group background screen */
 "group.bg.title" = "Plano de fundo";
+
+/* When a user is no longer a member of a chat group, this message is displyed at the bottom of the chat, preventing them from sending messages. */
+"group.chat.contact.is.not.member" = "Você não pode enviar mensagens para este grupo porque não é mais um membro deste grupo.";
 
 /* Label shown above group description input box */
 "group.description.label" = "Descrição do Grupo";
@@ -1447,7 +1456,7 @@
 "moment.replacement.title" = "Atenção";
 
 /* Text on a locked moment that explains the need to post your own in order to view it. */
-"moment.unlock.disclaimer" = "Para ver o momento deles, compartilhe o seu";
+"moment.unlock.disclaimer" = "Para ver o Momento deles, compartilhe o seu";
 
 /* For indicating that there was an error while uploading the post. */
 "moment.uploading.failure" = "Erro";
@@ -1462,7 +1471,7 @@
 "moments.swipe.for.more" = "deslize para mais";
 
 /* Message displayed to say when moments will disappear. */
-"mymoment.disappear.time.label" = "Seu Momento foi compartilhado com sua lista de contatos. Os momentos desaparecem após 24 horas e só podem ser visualizados uma vez.";
+"mymoment.disappear.time.label" = "Seu Moment foi compartilhado com sua lista de contatos. Momentos desaparecem após 24 horas.";
 
 /* One of the contact actions in My Post screen. Verb. */
 "mypost.action.message" = "Enviar mensagem";
@@ -1732,13 +1741,13 @@
 "post.privacy.header.frequentlyContacted" = "Frequentemente contatado";
 
 /* Header when selecting a group to share with */
-"post.privacy.header.groups" = "Teus Grupos";
+"post.privacy.header.groups" = "Compartilhar apenas com um grupo";
 
 /* Header when selecting destinations to forward a message, this header appears above the recent section */
 "post.privacy.header.recent" = "Recente";
 
 /* Controller title for changing destination and privacy */
-"post.privacy.title" = "Contatos";
+"post.privacy.title" = "Compartilhar com...";
 
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
 "privacy.list.blocked" = "Bloqueado";
@@ -2152,10 +2161,10 @@
 "share.destination.more" = "Mostre mais...";
 
 /* Prompt for the user to share a moment. */
-"share.moment.prompt" = "Compartilhe um momento";
+"share.moment.prompt" = "Compartilhe um Momento";
 
 /* Text placed on the blurred overlay of someone else's moment. */
-"shared.moment" = "momento de %@";
+"shared.moment" = "Momento de %@";
 
 /* Title for sharing to instagram stories */
 "shareprovider.instagramstories.title" = "Stories do Instagram";
